welcome.lessons.welcome.array.has271.Has271.scala.error
has271:7: error: value >=- is not a member of Int
    else if (nums(j) == 2 && nums(j+1) == 7 && (nums(j+2)<=3 || nums(j+2)>=-1)){
                                                                         ^